<resources>
    <string name="app_name">Unpause</string>
    <string name="loading">Loading</string>
    <string name="enjoy_managing_your_worktime">Enjoy managing your worktime</string>
    <string name="welcome_to_space">Welcome to\u0020</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="new_here">New here?</string>
    <string name="register_now_underlined"><u>Register now</u></string>
    <string name="invalid_input">Invalid input</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="setting">Setting</string>
    <string name="signed_in_as">Signed in as:</string>
    <string name="email_colon">Email:</string>
    <string name="first_name_colon">First name:</string>
    <string name="last_name_colon">Last name:</string>
    <string name="company_colon">Company:</string>
    <string name="hint_enter_first_name">Enter first name (optional)</string>
    <string name="hint_enter_last_name">Enter last name (optional)</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="register">Register</string>
    <string name="check_out">Check out</string>
    <string name="check_in">Check in</string>
    <string name="password_reset_mail_has_been_sent">Password reset mail has been sent.</string>
    <string name="email_missing">Please enter your email in the box above.</string>
    <string name="email_sent_to">An email has been sent to:</string>
    <string name="email_confirmation_continue">We have sent you
    an email confirmation. Please verify your email and we will continue.
    </string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="job_description">Job description</string>
    <string name="working_hours">Working hours</string>
    <string name="n_hours_m_minutes">%d hours %d minutes</string>
    <string name="shift_edited">Shift edited</string>
    <string name="shift_removed">Shift removed</string>
    <string name="shift_added">Shift added</string>
    <string name="search">Search</string>
    <string name="undo">Undo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="working_hours_must_be_positive">Working hours must be positive</string>
    <string name="total_working_hours_message">You have been working for %s hours and %s minutes, would you like to
        continue?
    </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="what_did_you_work_on">What did you work on?</string>
    <string name="adding_shift">Adding shift</string>
    <string name="you_arived_at">You arived at:</string>
    <string name="continue_text">Continue</string>
    <string name="you_are_leaving_at">You are leaving at:</string>
    <string name="send_email">Send email</string>
    <string name="csv_file_name">%s_%s</string>
    <string name="csv_file_name_2nd_part">%s_isplata_</string>
    <string name="arrivedAt">Arrival time</string>
    <string name="leftAt">Leaving time</string>
    <string name="description">Description</string>
    <string name="hours">Hours</string>
    <string name="total_hours">Total hours:</string>
    <string name="email_subject">Working hours</string>
    <string name="email_body">Hello,\nhere are my working hours\n\nCheers :)</string>
    <string name="open_csv">Open CSV</string>
    <string name="send_as_email">Send as email</string>
    <string name="add_custom_shift">Add custom shift</string>
    <string name="custom_shift_adding_outside_of_working_time_warning">Custom shift can only be added after working
        hours
    </string>
    <string name="your_location_has_changed">We noticed that your location has changed</string>
    <string name="arrived_at_location">Arrived at %s</string>
    <string name="left_location">Left %s</string>
    <string name="im_watching_you">Marko is watching you</string>
    <string name="location_based_notifications">Location based notifications</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="change_personal_info">Change personal info</string>
    <string name="signed_out">Signed out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="enter_description">Enter description</string>
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Channel for all notifications</string>
    <string name="check_out_successful">Check out successful.</string>
    <string name="enter_new_first_name">Enter new first name</string>
    <string name="enter_new_last_name">Enter new last name</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="update_password">Update password</string>
    <string name="update_info">Update info</string>
    <string name="update_personal_info">Update personal info</string>
    <string name="updated_user_info">Updated user info</string>
    <string name="fields_cannot_be_blank">Fields cannot be blank</string>
    <string name="updated_password">Updated password</string>
    <string name="password_cannot_be_blank">Password cannot be blank</string>
    <string name="working_hours_dd">Working hours: </string>
    <string name="firstName_lastName">%1$s %2$s</string>
    <string name="day_date">%1$s %2$s</string>
    <string name="connect_company">Connect company</string>
    <string name="change_company">Change company</string>
    <string name="enter_company_passcode">Enter company passcode</string>
    <string name="connect_company_help">Please ask your manager for your company passcode or contact us at info@codable.studio for help.</string>
    <string name="company_updated">Company updated.</string>
    <string name="skip">Skip</string>
    <string name="or">or</string>
    <string name="user_activity_filter_date_format">%1$s, %2$s</string>
    <string name="dash">—</string>
    <string name="add_location">Add location</string>
    <string name="are_you_sure_you_want_to_delete_location">Are you sure you want to delete location?</string>
    <string name="edit_location_name">Edit location name</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="add_company">Add company</string>
    <string name="unlock_them_and_make_your_professional_career_moments_easier_to_manage_and_track">Unlock them and make your professional career moments easier to manage and track.</string>
    <string name="premium_features">Premium Features</string>
    <string name="notifications">Notifications</string>
    <string name="location_will_be_triggered_every_time_you_arrive_or_leave_your_job_s_area_you_can_check_in_through_notification_service">Location will be triggered every time you arrive or leave your job‘s area. You can check in through notification service.</string>
    <string name="csv_format_export">CSV format export</string>
    <string name="let_s_you_create_csv_file_and_export_it_from_app_your_friends_and_team_members_can_get_your_shifts_and_open_it_like_sheet">Let‘s you create CSV file and export it from app. Your friends and team members can get your shifts and open it like sheet.</string>
    <string name="send_your_shifts_as_sheet_document_to_your_boss_or_your_team_members_everything_is_set_up_and_you_just_need_one_click">Send your shifts as sheet document to your boss or your team members. Everything is set up and you just need one click.</string>
    <string name="one_month_subscription">One month subscription</string>
    <string name="buy_for_0_99">Buy for $0.99</string>
    <string name="one_year_subscription">One year subscription</string>
    <string name="buy_for_6_99">Buy for $6.99</string>
    <string name="no_company_connected">No company connected</string>
    <string name="error_cannot_add_new_shift_the_entered_shift_is_overlapping_with_already_existing_shift">ERROR: cannot add new shift. The entered shift is overlapping with already existing shift.</string>
    <string name="error_cannot_edit_shift_the_edited_shift_is_overlapping_with_already_existing_shift">ERROR: cannot edit shift. The edited shift is overlapping with already existing shift.</string>
    <string name="loading_dots">loading…</string>
    <string name="locations">Locations:</string>
    <string name="add_a_new_location">Add a new location</string>
    <string name="manage_locations_on_map">Manage locations on map</string>
    <string name="lat_long_format">%1$.3f° N %2$.3f° W</string>
    <string name="unnamed_location">Unnamed location</string>
    <string name="you_need_to_check_in_before_you_can_check_out">You need to check in before you can check out.</string>
    <string name="you_are_already_checked_in">You are already checked in.</string>
    <string name="last_check_in_time">Last check in time:</string>
    <string name="working_time">Working time:</string>
    <string name="n_h_m_min">%d h %d min</string>
    <string name="description_cannot_be_empty">Description cannot be empty.</string>
    <string name="manage_locations">Manage locations</string>
    <string name="your_company_has_no_locations">Your company has no locations.</string>
    <string name="you_dont_have_a_company_connected">You don\'t have a company connected.</string>
</resources>
