<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.fragment.register.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="first name"
                android:hint="@string/hint_enter_first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/text_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_item_spacing"
                android:autofillHints="last name"
                android:hint="@string/hint_enter_last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_item_spacing"
                android:autofillHints="email"
                android:hint="@string/hint_enter_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_item_spacing"
                android:autofillHints="password"
                android:hint="@string/hint_enter_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_item_spacing"
                android:text="@string/register" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>