<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="20dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Subtitle16"
            android:layout_marginBottom="15dp"
            android:text="@string/what_did_you_work_on"/>

    <EditText
            android:id="@+id/descriptionEditText"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="8"
            android:minLines="8"
            android:gravity="top|start"
            android:maxLines="20"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:background="@android:color/transparent"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

        <Button
                android:id="@+id/cancelSaveDialogButton"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="18sp"/>
        <Space
                android:layout_width="10dp"
                android:layout_height="0dp"/>

        <Button
                android:id="@+id/saveDescriptionButton"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>